finishing things up

--- a/index.html
+++ b/index.html
@@ -99,39 +99,34 @@
                         <div class="carousel-inner" role="listbox">
                             <div class="carousel-item active">
                                 <div class="view">
-                                    <img class="d-block w-100"
-                                        src="https://mdbootstrap.com/img/Photos/Slides/img%20(68).jpg"
-                                        alt="First slide">
+                                    <img class="d-block w-100" src="img/galery/1.JPG" alt="First slide">
                                     <div class="mask rgba-black-light"></div>
                                 </div>
                                 <div class="carousel-caption">
-                                    <h3 class="h3-responsive">Light mask</h3>
-                                    <p>First text</p>
+                                    <h3 class="h3-responsive">Jemuran Ikan Asin Otomatis</h3>
+                                    <p>Tampak Samping</p>
                                 </div>
                             </div>
                             <div class="carousel-item">
                                 <!--Mask color-->
                                 <div class="view">
-                                    <img class="d-block w-100"
-                                        src="https://mdbootstrap.com/img/Photos/Slides/img%20(6).jpg"
-                                        alt="Second slide">
-                                    <div class="mask rgba-black-strong"></div>
+                                    <img class="d-block w-100" src="img/galery/2.JPG" alt="Second slide">
+                                    <div class="mask rgba-black-light"></div>
                                 </div>
                                 <div class="carousel-caption">
-                                    <h3 class="h3-responsive">Strong mask</h3>
-                                    <p>Secondary text</p>
+                                    <h3 class="h3-responsive">Jemuran Ikan Asin Otomatis</h3>
+                                    <p>Tampak Depan</p>
                                 </div>
                             </div>
                             <div class="carousel-item">
                                 <!--Mask color-->
                                 <div class="view">
-                                    <img class="d-block w-100"
-                                        src="https://mdbootstrap.com/img/Photos/Slides/img%20(9).jpg" alt="Third slide">
-                                    <div class="mask rgba-black-slight"></div>
+                                    <img class="d-block w-100" src="img/galery/3.JPG" alt="Third slide">
+                                    <div class="mask rgba-black-light"></div>
                                 </div>
                                 <div class="carousel-caption">
-                                    <h3 class="h3-responsive">Slight mask</h3>
-                                    <p>Third text</p>
+                                    <h3 class="h3-responsive">Jemuran Ikan Asin Otomatis</h3>
+                                    <p>Tampak Depan</p>
                                 </div>
                             </div>
                         </div>
@@ -166,17 +161,18 @@
                 <div class="col-lg-12">
                     <h3 class="text-center">Fitur</h3>
                     <hr>
-                    <p class="text-center">" beberapa fitur menarik yang bisa digunakan pada alat jemuran ikan asin
+                    <p class="text-center">" beberapa fitur menarik yang bisa digunakan pada website alat jemuran ikan
+                        asin
                         otomatis"</p>
                 </div>
             </div>
-            <div class="row-md-10 mt-5 justify-content-center">
+            <div class="row-md-10 mt-5 mb-5 justify-content-center">
                 <div class="card-group mr-2">
                     <div class="card">
                         <img src="img/about/clock.png" class="card-img-top" alt="time">
                         <div class="card-body">
                             <h5 class="card-title">Realtime Monitoring</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural
+                            <p class="card-text">Monitor Keadaan Alat Dimanapun Dan Kapanpun
                             </p>
 
                         </div>
@@ -184,8 +180,8 @@
                     <div class="card">
                         <img src="img/about/money.png" class="card-img-top" alt="money">
                         <div class="card-body">
-                            <h5 class="card-title">Chart</h5>
-                            <p class="card-text">This card has supporting text below as a natural lead-in to
+                            <h5 class="card-title">Update Informasi</h5>
+                            <p class="card-text">Menampilkan data terbaru dari semua sensor
                             </p>
 
                         </div>
@@ -193,40 +189,10 @@
                     <div class="card">
                         <img src="img/about/product.png" class="card-img-top" alt="product">
                         <div class="card-body">
-                            <h5 class="card-title">Kualitas Produk</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural
+                            <h5 class="card-title">Grafik Chart</h5>
+                            <p class="card-text">Menampilkan data sensor kedalam grafik
                             </p>
-
                         </div>
-                    </div>
-                </div>
-                <div class="row justify-content-center mt-3 pb-5">
-                    <div class="col-md-4">
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item active">Cras justo odio</li>
-                            <li class="list-group-item">Dapibus ac facilisis in</li>
-                            <li class="list-group-item">Morbi leo risus</li>
-                            <li class="list-group-item">Porta ac consectetur ac</li>
-                            <li class="list-group-item">Vestibulum at eros</li>
-                        </ul>
-                    </div>
-                    <div class="col-md-4">
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item active">Cras justo odio</li>
-                            <li class="list-group-item">Dapibus ac facilisis in</li>
-                            <li class="list-group-item">Morbi leo risus</li>
-                            <li class="list-group-item">Porta ac consectetur ac</li>
-                            <li class="list-group-item">Vestibulum at eros</li>
-                        </ul>
-                    </div>
-                    <div class="col-md-4">
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item active">Cras justo odio</li>
-                            <li class="list-group-item">Dapibus ac facilisis in</li>
-                            <li class="list-group-item">Morbi leo risus</li>
-                            <li class="list-group-item">Porta ac consectetur ac</li>
-                            <li class="list-group-item">Vestibulum at eros</li>
-                        </ul>
                     </div>
                 </div>
             </div>
@@ -258,10 +224,15 @@
 
                             <div id="collapseOne" class="collapse show" aria-labelledby="headingOne"
                                 data-parent="#accordionExample">
-                                <div class="card-body">
-                                    Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer
-                                    farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them
-                                    accusamus labore sustainable VHS.
+                                <div class="card-body text-left">
+                                    <p><i class="fa fa-list-ul" aria-hidden="true"></i> Masukan kabel power alat kedalam
+                                        sumber listrik</p>
+                                    <p><i class="fa fa-list-ul" aria-hidden="true"></i> Tekan saklar on untuk mulai
+                                        menghidupkan alat</p>
+                                    <p><i class="fa fa-list-ul" aria-hidden="true"></i> Alat otomatis akan mendeteksi
+                                        cuaca dengan sensor hujan dan suhu. Apabila terjadi indikasi akan terjadi hujan
+                                        maka alat otomatis melindungi ikan asin dengan menutup atap alat dan menyalakan
+                                        blower</p>
                                 </div>
                             </div>
                         </div>
@@ -276,30 +247,13 @@
                             </div>
                             <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
                                 data-parent="#accordionExample">
-                                <div class="card-body">
-                                    Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer
-                                    farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them
-                                    accusamus labore sustainable VHS.
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card">
-                            <div class="card-header" id="headingThree">
-                                <h2 class="mb-0">
-                                    <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
-                                        data-target="#collapseThree" aria-expanded="false"
-                                        aria-controls="collapseThree">
-                                        Lain-Lain
-                                    </button>
-                                </h2>
-                            </div>
-                            <div id="collapseThree" class="collapse" aria-labelledby="headingThree"
-                                data-parent="#accordionExample">
-                                <div class="card-body">
-
-                                    ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer
-                                    farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them
-                                    accusamus labore sustainable VHS.
+                                <div class="card-body text-left">
+                                    <p><i class="fa fa-list-ul" aria-hidden="true"></i> Masuk ke halaman monitoring
+                                        untuk melihat data terbaru dari alat</p>
+                                    <p><i class="fa fa-list-ul" aria-hidden="true"></i> Data yang pertama adalah kondisi
+                                        terbaru dari alat</p>
+                                    <p><i class="fa fa-list-ul" aria-hidden="true"></i> Data statistik sensor dapat
+                                        dilihat dalam bentuk grafik atau chart</p>
                                 </div>
                             </div>
                         </div>
@@ -309,9 +263,10 @@
                     <div class="card text-white bg-primary mb-3" style="max-width: 18rem;">
                         <div class="card-header">Tim Ikan Asin App</div>
                         <div class="card-body">
-                            <h5 class="card-title">Alamat :</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
+                            <h5 class="card-title">Hubungi Kami :</h5>
+                            <span><i class="fa fa-whatsapp fa-2x mr-2" aria-hidden="true"></i> </span>
+                            <span><i class="fa fa-github fa-2x mr-2" aria-hidden="true"></i> </span>
+                            <span><i class="fa fa-globe fa-2x mr-2" aria-hidden="true"></i></span>
                         </div>
                     </div>
                 </div>
